# pasopiaemulator

./: .gitignore  CMakeLists.txt  README.md
pasopiaemulator/: CMakeLists.txt  fdc.c  fdc.h  hid_app.c  hsync.pio  joystick.c  pasopiaemulator.c  pasopiakeymap.h  pasopiamisc.h  pasopiarom.h  rgb.pio  vga16_graphics.c  vga16_graphics.h  vsync.pio  ym2203.cpp  ym2203.h
pasopiaemulator/hidparser/: example.c  hidparser.c
prebuild/: pasopia7emulator.uf2  pasopiaemulator.uf2
